# miniCC

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
backend/: AssemblyEmitter.cpp  AssemblyEmitter.hpp  GlobalData.hpp  IRtoLLIR.cpp  IRtoLLIR.hpp  InstructionDefinitions.hpp  InstructionSelection.cpp  InsturctionSelection.hpp  LLIROptimizer.cpp  LLIROptimizer.hpp  LowLevelType.hpp  MachineBasicBlock.cpp  MachineBasicBlock.hpp  MachineFunction.cpp  MachineFunction.hpp  MachineIRModule.hpp  MachineInstruction.cpp  MachineInstruction.hpp  MachineInstructionLegalizer.cpp  MachineInstructionLegalizer.hpp  MachineOperand.cpp  MachineOperand.hpp  PrologueEpilogInsertion.cpp  PrologueEpilogInsertion.hpp  RegisterAllocator.cpp  RegisterAllocator.hpp  RegisterClassSelection.cpp  RegisterClassSelection.hpp  RegisterInfo.hpp  StackFrame.cpp  StackFrame.hpp  Support.cpp  Support.hpp  TargetABI.hpp  TargetInstruction.hpp  TargetInstructionLegalizer.cpp  TargetInstructionLegalizer.hpp  TargetMachine.cpp  TargetMachine.hpp  TargetRegister.hpp
frontend/: ErrorLogger.cpp  ErrorLogger.hpp  PreProcessor.cpp  PreProcessor.hpp  Support.hpp  driver.cpp  frontend_test.cpp
frontend/ast/: AST.cpp  AST.hpp  ASTPrint.cpp  ASTPrint.hpp  ASTVisitor.hpp  Semantics.cpp  Semantics.hpp  Type.cpp  Type.hpp
frontend/lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
frontend/parser/: Parser.cpp  Parser.hpp  SymbolTable.cpp  SymbolTable.hpp
frontend/preprocessor/: PPLexer.cpp  PPLexer.hpp  PPToken.hpp  PreProcessor.cpp  PreProcessor.hpp
include/: assert.h  inttypes.h  math.h  stdbool.h  stdio.h  stdlib.h  time.h
middle_end/IR/: BasicBlock.cpp  BasicBlock.hpp  Function.cpp  Function.hpp  IRFactory.hpp  IRType.cpp  IRType.hpp  Instructions.cpp  Instructions.hpp  Module.cpp  Module.hpp  Type.cpp  Type.hpp  Value.cpp  Value.hpp
middle_end/Transforms/: CSEPass.cpp  CSEPass.hpp  CopyPropagationPass.cpp  CopyPropagationPass.hpp  DeadCodeEliminationPass.cpp  DeadCodeEliminationPass.hpp  FunctionPass.hpp  LoopHoistingPass.cpp  LoopHoistingPass.hpp  PassManager.cpp  PassManager.hpp  Util.cpp  Util.hpp  ValueNumberingPass.cpp  ValueNumberingPass.hpp
tests/: TestRun.py  test.c  test.txt
tests/algorithms/: binary_search.c  bubble_sort.c  floyd_cycle_detection_algorithm.c  hash_crc32.c  prime.c  (+3 more)
(+228 files in other folders)
